# CityBuilderGame

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
blender/: blade.blend  ground_new.blend  lara.blend  level_1_test.blend  level_2_test.blend  level_3_test.blend  level_4_test.blend  level_5_sub.blend  level_5_test.blend  level_8_test.blend  sky_cube.blend  snake.blend
docs/: components.md  tile-naming.md
include/: application.hpp  game.hpp
include/components/: autoNavComponent.hpp  bladeComponent.hpp  buildMarkerComponent.hpp  cameraComponent.hpp  components.hpp  debugComponent.hpp  instancedMeshComponent.hpp  laraComponent.hpp  lightComponent.hpp  meshComponent.hpp  metaBlockComponent.hpp  navBlockComponent.hpp  routeComponent.hpp  snakeComponent.hpp  switchBlockComponent.hpp  switchComponent.hpp  transformationComponent.hpp
include/events/: cameraUpdateEvent.hpp  events.hpp  keyEvent.hpp  laraEvents.hpp  oskEvents.hpp  resourceEvents.hpp
include/gui/: colors.hpp  gui.hpp  menus.hpp  rectangle.hpp
include/misc/: cells.hpp  enemies.hpp
include/resources/: configValue.hpp  enemyTemplate.hpp  meshLoader.hpp  meshRes.hpp  resourceManager.hpp  tileTemplate.hpp
include/systems/: animationSystem.hpp  cameraSystem.hpp  inputSystem.hpp  levelSystem.hpp  movementSystem.hpp  renderSystem.hpp  systems.hpp
res/: resources.xml
res/models/: blade.mtl  box.mtl  corner.mtl  corner_2.mtl  front_ew.mtl  front_nes.mtl  front_straight_3w.mtl  front_sw.mtl  front_w.mtl  ground_corner.mtl  ground_n.mtl  ground_ne.mtl  ground_new.mtl  ground_ns.mtl  ground_side_3w_270.mtl  ground_straight_3w_90_crack2.mtl  lara.mtl  level_1_test.mtl  level_2_test.mtl  level_3_test.mtl  level_4_test.mtl  level_5_sub.mtl  level_5_test.mtl  level_8_test.mtl  side_e.mtl  side_es.mtl  side_esw.mtl  side_nesw.mtl  side_new.mtl  side_nsw.mtl  side_nw.mtl  side_s.mtl  snake.mtl  (+3 more)
src/: application.cpp  game.cpp  main.cpp
(+51 files in other folders)
